--- a/main.html
+++ b/main.html
@@ -976,6 +976,9 @@ function restartStory(){
 
                 <div id="skip">
                     <div class="skip-button" onclick="skip();">Skip Story</div>
+                    <div class="credits">
+                    <strong>Credits:</strong> <br><a href="http://kwonoh.net">Keshav Dasu</a><br><a href="http://suyunbae.com">Suyun Bae</a><br><a href="http://vidi.cs.ucdavis.edu/People/FujiwaraTakanori">Takanori Fujiwara</a>
+                    </div>
                 </div>
             </div>
         </div>
