--- a/main.html
+++ b/main.html
@@ -971,13 +971,16 @@ function restartStory(){
                         <div class="misc-desc">
                             <a href="http://associations.phr.tmu.edu.tw">About the data</a>
                         </div>
+                        <div class="misc-desc">
+                            <strong>Credits:</strong> <br><a href="http://keshavdasu.com">Keshav Dasu</a><br><a href="http://suyunbae.com">Suyun Bae</a><br><a href="http://vidi.cs.ucdavis.edu/People/FujiwaraTakanori">Takanori Fujiwara</a><br><a href="http://web.cs.ucdavis.edu/~ma/">Kwan-Liw Ma</a>
+                        </div>
                     </div>
                 </div>
 
                 <div id="skip">
                     <div class="skip-button" onclick="skip();">Skip Story</div>
                     <div class="credits">
-                    <strong>Credits:</strong> <br><a href="http://kwonoh.net">Keshav Dasu</a><br><a href="http://suyunbae.com">Suyun Bae</a><br><a href="http://vidi.cs.ucdavis.edu/People/FujiwaraTakanori">Takanori Fujiwara</a>
+                    <strong>Credits:</strong> <br><a href="http://keshavdasu.com">Keshav Dasu</a><br><a href="http://suyunbae.com">Suyun Bae</a><br><a href="http://vidi.cs.ucdavis.edu/People/FujiwaraTakanori">Takanori Fujiwara</a><br><a href="http://web.cs.ucdavis.edu/~ma/">Kwan-Liw Ma</a>
                     </div>
                 </div>
             </div>
