--- a/main.html
+++ b/main.html
@@ -972,7 +972,7 @@ function restartStory(){
                             <a href="http://associations.phr.tmu.edu.tw">About the data</a>
                         </div>
                         <div class="misc-desc">
-                            <strong>Credits:</strong> <br><a href="http://keshavdasu.com">Keshav Dasu</a><br><a href="http://suyunbae.com">Suyun Bae</a><br><a href="http://vidi.cs.ucdavis.edu/People/FujiwaraTakanori">Takanori Fujiwara</a><br><a href="http://web.cs.ucdavis.edu/~ma/">Kwan-Liw Ma</a>
+                            <strong>Credits:</strong> <br><a href="http://keshavdasu.com">Keshav Dasu</a><br><a href="http://suyunbae.com">Suyun Bae</a><br><a href="http://vidi.cs.ucdavis.edu/People/FujiwaraTakanori">Takanori Fujiwara</a><br><a href="http://web.cs.ucdavis.edu/~ma/">Kwan-Liu Ma</a>
                         </div>
                     </div>
                 </div>
