--- a/main.html
+++ b/main.html
@@ -980,7 +980,7 @@ function restartStory(){
                 <div id="skip">
                     <div class="skip-button" onclick="skip();">Skip Story</div>
                     <div class="credits">
-                    <strong>Credits:</strong> <br><a href="http://keshavdasu.com">Keshav Dasu</a><br><a href="http://suyunbae.com">Suyun Bae</a><br><a href="http://vidi.cs.ucdavis.edu/People/FujiwaraTakanori">Takanori Fujiwara</a><br><a href="http://web.cs.ucdavis.edu/~ma/">Kwan-Liw Ma</a>
+                    <strong>Credits:</strong> <br><a href="http://keshavdasu.com">Keshav Dasu</a><br><a href="http://suyunbae.com">Suyun Bae</a><br><a href="http://vidi.cs.ucdavis.edu/People/FujiwaraTakanori">Takanori Fujiwara</a><br><a href="http://web.cs.ucdavis.edu/~ma/">Kwan-Liu Ma</a>
                     </div>
                 </div>
             </div>
